# pkmnhof

./: .gitignore  .pre-commit-config.yaml  README.md  dump.py  fetch  main.py  pyproject.toml  requirements.txt  setup.cfg
misc/: fetch
pkmnhof/: __init__.py  __main__.py  dex.py
pokehof/: __init__.py  __main__.py
scripts/: fetch
