[metadata]
name = pkmnhof
long_description = file: README.md
long_description_content_type = text/markdown
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = pkmnhof
install_requires =
    Pillow~=8.3.0
python_requires = >=3.9.0

[options.entry_points]
console_scripts =
    pkmnhof = pkmnhof:main

[options.package_data]
pkmnhof = data/*
