[metadata]
name = pkmnhof
description = Pokémon Hall of Fame image generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlgs/pkmnhof
author = Tiago Seabra
author_email = tlgs@users.noreply.github.com
license = UNLICENSE
license_files = UNLICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = pkmnhof
install_requires =
    Pillow~=8.3
python_requires = >=3.9

[options.entry_points]
console_scripts =
    pkmnhof = pkmnhof.__main__:main

[options.package_data]
pkmnhof = data/*
